fixtures/tests/module_visibility_fail.stderr
error[E0603]: macro import `secret` is private
 --> $WORKSPACE/fixtures/tests/module_visibility_fail.rs
  |
  |     let _: i32 = sealed::secret!(1);
  |                          ^^^^^^ private macro import
  |
note: the macro import `secret` is defined here...
 --> $WORKSPACE/fixtures/tests/module_visibility_fail.rs
  |
  |     fn secret(input: TokenStream) -> TokenStream {
  |        ^^^^^^
note: ...and refers to the macro `global_secret_ec7fdb4199bec43e9b1adef80eba03f7d908379ab09dfafc4a48bc572abb7610` which is defined here
 --> $WORKSPACE/fixtures/tests/module_visibility_fail.rs
  |
  |     #[token_goblin::munch]
  |     ^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `token_goblin::munch` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0603]: macro import `hidden` is private
 --> $WORKSPACE/fixtures/tests/module_visibility_fail.rs
  |
  |         let _: i32 = super::a::hidden!(1);
  |                                ^^^^^^ private macro import
  |
note: the macro import `hidden` is defined here...
 --> $WORKSPACE/fixtures/tests/module_visibility_fail.rs
  |
  |     fn hidden(input: TokenStream) -> TokenStream {
  |        ^^^^^^
note: ...and refers to the macro `global_hidden_e5a57955368dc8ba0d2fecdae2f54f24ec1ccabf1e9d6d0b9439af8929367673` which is defined here
 --> $WORKSPACE/fixtures/tests/module_visibility_fail.rs
  |
  |     #[token_goblin::munch]
  |     ^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `token_goblin::munch` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0603]: macro import `super_only` is private
 --> $WORKSPACE/fixtures/tests/module_visibility_fail.rs
  |
  |             let _: i32 = super::parent::child::super_only!(1);
  |                                                ^^^^^^^^^^ private macro import
  |
note: the macro import `super_only` is defined here...
 --> $WORKSPACE/fixtures/tests/module_visibility_fail.rs
  |
  |             pub(super) fn super_only(input: TokenStream) -> TokenStream {
  |                           ^^^^^^^^^^
note: ...and refers to the macro `global_super_only_d4aaa560a781a6bc85ae43746317bbb90b5b7a037dd5fd6dca54d27c5f8700c2` which is defined here
 --> $WORKSPACE/fixtures/tests/module_visibility_fail.rs
  |
  |             #[token_goblin::munch]
  |             ^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `token_goblin::munch` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0603]: macro import `bar` is private
 --> $WORKSPACE/fixtures/tests/module_visibility_fail.rs
  |
  |     let _: i32 = bar::bar!(1);
  |                       ^^^ private macro import
  |
note: the macro import `bar` is defined here...
 --> $WORKSPACE/fixtures/tests/module_visibility_fail.rs
  |
  |     fn bar(input: TokenStream) -> TokenStream {
  |        ^^^
note: ...and refers to the macro `global_bar_0b30fe3cde168e30feb55639e5d5759c9c8712615337a83271217579a5fac10f` which is defined here
 --> $WORKSPACE/fixtures/tests/module_visibility_fail.rs
  |
  |     #[token_goblin::munch]
  |     ^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `token_goblin::munch` (in Nightly builds, run with -Z macro-backtrace for more info)
